Fix style so quick actions align when they wrap. #MBL-10149 Fixed

--- a/content/css/themes/swiftpage/base.less
+++ b/content/css/themes/swiftpage/base.less
@@ -310,7 +310,6 @@
 {
     display: none;
     background: #eaf1df;
-    padding: 0 !important;
 }
 
 .actions-row:after
